level before or after spatializing?

--- a/generate_scene.ipynb
+++ b/generate_scene.ipynb
@@ -20,11 +20,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f451024e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ----------- FUNCTION DEFINITIONS: -----------\n",
+    "# ----------- FUNCTION : -----------\n",
     "\n",
     "def head_2_ku_ears(head_pos,head_orient):\n",
     "# based on head pos and orientation, compute coordinates of ears\n",
@@ -98,10 +97,14 @@
     "        #mic_rirs[:, :, ear, source]\n",
     "        filter_L=sig.fftconvolve(np.squeeze(mic_rirs[:,:,0, i]).T, decoder[:,:,0].T, 'full', 1).sum(0)\n",
     "        filter_R=sig.fftconvolve(np.squeeze(mic_rirs[:,:,1, i]).T, decoder[:,:,1].T, 'full', 1).sum(0)\n",
+    "        # set level for current source BEFORE SPATIALIZING:\n",
+    "        source_sig=set_level(source_sig.T,levels[i])\n",
+    "        # spatialize:\n",
     "        sig_L=sig.fftconvolve(source_sig, filter_L, 'full')\n",
     "        sig_R=sig.fftconvolve(source_sig, filter_R, 'full')\n",
-    "        # set level for current source:\n",
-    "        sig_LR_leveled=set_level(np.array((sig_L,sig_R)).T,levels[i])\n",
+    "        # # set level for current source AFTER SPATIALIZING:\n",
+    "        # sig_LR_leveled=set_level(np.array((sig_L,sig_R)).T,levels[i])\n",
+    "        sig_LR_leveled=np.array((sig_L,sig_R)).T\n",
     "        # add generated source signal to the mixture using a function that takes variable signal lenghts\n",
     "        sig_L_mix=add_signals(sig_L_mix,sig_LR_leveled[:,0])# left channel\n",
     "        sig_R_mix=add_signals(sig_R_mix,sig_LR_leveled[:,1])# right channel\n",
@@ -119,10 +122,10 @@
    "outputs": [],
    "source": [
     "# --------------- DESIGN SCENE ----------------\n",
-    "room = np.array([8., 4., 3.]) # Room dimensions\n",
+    "room = np.array([4., 4., 3.]) # Room dimensions\n",
     "rt60 = np.array([.2])\n",
     "sources_pos= [[3., 2., 1.6], [2., 3., 1.6], [1., 2., 1.6], [2., 1., 1.6]] # Sources coordinates \n",
-    "head_pos= np.array([2, 2, 1.6]) # Listener coordinates\n",
+    "head_pos= np.array([room[0]/2, room[1]/2, 1.6]) # Listener coordinates\n",
     "head_orient = np.array([0, 0]) # Head rotation\n",
     "ears_pos=head_2_ku_ears(head_pos,head_orient)\n",
     "\n",
@@ -187,10 +190,10 @@
     "\n",
     "\n",
     "# Load source signals:\n",
-    "source0, fs2 = sf.read('test1.wav');\n",
-    "source1, fs2 = sf.read('test2.wav');\n",
-    "source2, fs2 = sf.read('test3.wav');\n",
-    "source3, fs2 = sf.read('test4.wav');\n",
+    "source0, fs2 = sf.read('test1.wav')# male\n",
+    "source1, fs2 = sf.read('test2.wav')# child\n",
+    "source2, fs2 = sf.read('test3.wav')# female (rat Arthur)\n",
+    "source3, fs2 = sf.read('test4.wav')# female Harvard\n",
     "\n",
     "# function to resample the signal and pick only one channel\n",
     "def resampled_mono(src,fs,fs2):\n",
@@ -203,8 +206,8 @@
     "sources_sigs.append(resampled_mono(source2,fs,fs2))\n",
     "sources_sigs.append(resampled_mono(source3,fs,fs2))\n",
     "\n",
-    "# set levels for all sources:\n",
-    "levels=[-45,-45,-45,-15] \n",
+    "# set levels for all sources (this is level at the source, distance attenuation is applied by convolving with irs):\n",
+    "levels=[-45,-45,-45,-45] \n",
     "\n",
     "# generate a mixture signal with localized sources\n",
     "mixture=generate_scenes(sources_sigs,levels,mic_rirs,decoder_KU100woHAinear)\n",
