--- a/generate_scene copy.ipynb
+++ b/generate_scene copy.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "98b6530b",
    "metadata": {},
    "outputs": [
@@ -113,12 +113,12 @@
     "nSrc = src.shape[0]\n",
     "\n",
     "# Compute the echograms, which means how many reflections, at what time and from which coordinates:\n",
-    "abs_echograms = srs.compute_echograms_sh(room, src, mic, abs_walls, limits, ambi_order, rims_d)"
+    "abs_echograms = srs.compute_echograms_sh(room, src, mic, abs_walls, limits, ambi_order, rims_d, head_orient)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "3b7786e3",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "99a45b85",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,6 +219,30 @@
   {
    "cell_type": "markdown",
    "id": "c9f1e1c2",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e19f006c",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c16cebe",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c21265b4",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e5b731f",
    "metadata": {},
    "source": []
   }
