fixed a bug where some sources appeared outside the room

--- a/microson_v1_dataset_design.ipynb
+++ b/microson_v1_dataset_design.ipynb
@@ -98,27 +98,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e448a3cb",
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "noise_info = []\n",
     "for split in ['tr', 'cv', 'tt']:\n",
     "    split_path = pjoin(pjoin(wham_path, 'wham_noise'), split)\n",
     "    for audio_path in  tqdm.tqdm(os.listdir(split_path)):\n",
     "        audio, fs = sf.read(pjoin(split_path, audio_path))\n",
     "        noise_info.append({'split': split, 'audio_path': pjoin(audio_path), 'fs_noise': fs, 'shape':audio.shape})\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d1faef0e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        \n",
+    "\n",
     "ometa = pd.read_csv(pjoin(mls_path, 'metainfo.txt'), sep= '|')\n",
     "ometa.columns = ometa.columns.str.strip()\n",
     "ometa['PARTITION'] = ometa['PARTITION'].str.strip()\n",
@@ -143,12 +136,13 @@
     "lens = list(df_n['shape'])\n",
     "\n",
     "df_s.to_pickle(\"mls_info.pkl\")\n",
-    "df_n.to_pickle(\"wham_info.pkl\")"
+    "df_n.to_pickle(\"wham_info.pkl\")\n",
+    "''';"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "e594b501",
    "metadata": {},
    "outputs": [],
@@ -159,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "4272d6c5",
    "metadata": {},
    "outputs": [],
@@ -214,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "a31aab8a",
    "metadata": {},
    "outputs": [],
@@ -226,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "18ef54fe",
    "metadata": {},
    "outputs": [],
@@ -237,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "6bc93d16",
    "metadata": {},
    "outputs": [],
@@ -248,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "debfea90",
    "metadata": {},
    "outputs": [],
@@ -268,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "8c01244c",
    "metadata": {},
    "outputs": [],
@@ -278,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "599087b2",
    "metadata": {},
    "outputs": [],
@@ -288,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "b8bb743b",
    "metadata": {},
    "outputs": [],
@@ -299,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "4d52c430",
    "metadata": {},
    "outputs": [],
@@ -319,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "de951870",
    "metadata": {},
    "outputs": [],
@@ -333,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "3ad33695",
    "metadata": {},
    "outputs": [],
@@ -343,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "d7e713e0",
    "metadata": {},
    "outputs": [],
@@ -353,22 +347,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "60acff81",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 225494/225494 [00:03<00:00, 69420.93it/s]\n"
+     ]
+    }
+   ],
    "source": [
+    "# import my modules (helpers.py where I stored all the functions):\n",
+    "import helpers as hlp\n",
+    "import importlib\n",
+    "importlib.reload(hlp);\n",
+    "\n",
     "target_pos = []\n",
-    "for k in range(len(room_x)):\n",
-    "    new_target_pos, new_head_pos = hlp.place_on_circle_in_room(head_pos[k], dist[k], \n",
-    "                                                               angle[k]+head_orient_azi[k], room[k])\n",
-    "    head_pos[k] = new_head_pos\n",
-    "    target_pos.append(new_target_pos)\n"
+    "for k in tqdm.tqdm(range(len(room_x))):\n",
+    "    target_pos.append(hlp.place_on_circle_in_room(head_pos[k], dist[k], \n",
+    "                                                               angle[k]+head_orient_azi[k], room[k]))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "ca0975b6",
    "metadata": {},
    "outputs": [],
@@ -378,30 +383,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "08830e6d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Checks:\n",
-    "np.all(target_pos < room) # all targets are in the room"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 22,
-   "id": "7e1f5f59",
+   "id": "d95485c0",
    "metadata": {},
    "outputs": [
     {
@@ -416,28 +399,35 @@
     }
    ],
    "source": [
-    "np.all(head_pos < room) # all heads are in the room"
+    "np.all(target_pos > 0.) # all targets are positive"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "53ea9daa",
+   "id": "08830e6d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# now let's check the ears:\n",
-    "ears_pos = []\n",
-    "for k in range(head_pos.shape[0]):\n",
-    "    ears_pos.append(np.array(hlp.head_2_ku_ears(head_pos[k], np.array([head_orient_azi[k],head_orient_ele[k]]))))\n",
-    "\n",
-    "ears_pos = np.array(ears_pos)"
+    "# Checks:\n",
+    "np.all(target_pos < room) # all targets are in the room"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "5e078be3",
+   "id": "7e1f5f59",
    "metadata": {},
    "outputs": [
     {
@@ -452,34 +442,28 @@
     }
    ],
    "source": [
-    "np.all(ears_pos[:, 0, :] < room) # all left ears are in the room"
+    "np.all(head_pos < room) # all heads are in the room"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "f72fb7c7",
+   "id": "53ea9daa",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.all(ears_pos[:, 1, :] < room) # all right are in the room"
+    "# now let's check the ears:\n",
+    "ears_pos = []\n",
+    "for k in range(head_pos.shape[0]):\n",
+    "    ears_pos.append(np.array(hlp.head_2_ku_ears(head_pos[k], np.array([head_orient_azi[k],head_orient_ele[k]]))))\n",
+    "\n",
+    "ears_pos = np.array(ears_pos)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "b5550b20",
+   "id": "5e078be3",
    "metadata": {},
    "outputs": [
     {
@@ -494,23 +478,86 @@
     }
    ],
    "source": [
+    "np.all(ears_pos[:, 0, :] < room) # all left ears are in the room"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "f72fb7c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.all(ears_pos[:, 1, :] < room) # all right are in the room"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "47ee7876",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.all(ears_pos > 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "b5550b20",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# final MINIMUM distance between head and target (check we don't have an intra-craneal target)\n",
     "min(np.sqrt(np.sum((target_pos - head_pos)**2, axis=1))) > 0.0875 * 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "id": "d6a36857",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.026348043441429"
+       "1.0248253294449863"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,17 +569,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "fd075f83",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5028039945766125"
+       "0.4865705117067447"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "d6fa0b38",
    "metadata": {},
    "outputs": [
@@ -553,7 +600,7 @@
        "0.5061991183289214"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,17 +611,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "id": "1462969a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.2000014170549651"
+       "0.20000918012154356"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "id": "61390f27",
    "metadata": {},
    "outputs": [],
@@ -596,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "id": "6135472e",
    "metadata": {},
    "outputs": [
@@ -897,7 +944,7 @@
        "[225494 rows x 16 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "id": "c6ad8019",
    "metadata": {},
    "outputs": [],
@@ -930,7 +977,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
+   "id": "76109516",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['idx'] = range(len(df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "id": "f7f31f9c",
    "metadata": {},
    "outputs": [],
@@ -948,13 +1005,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "id": "700bec6a",
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv('meta_microson_v1.csv', index=False, compression='infer')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "017cb9d0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
