--- a/microson_v1_dataset_generation_dev.ipynb
+++ b/microson_v1_dataset_generation_dev.ipynb
@@ -84,22 +84,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "10f5268f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Unnamed: 0', 'mls_split', 'speaker', 'book', 'speech_path', 'gender',\n",
-       "       'wham_split', 'noise_path', 'chunk', 'num_chunks', 'len_s', 'len_samp',\n",
-       "       'fs_noise', 'shape', 'phase_inv', 'room_x', 'room_y', 'room_z', 'rt60',\n",
-       "       'headC_x', 'headC_y', 'headC_z', 'src_x', 'src_y', 'src_z',\n",
-       "       'headOrient_azi', 'headOrient_ele', 'snr', 'lr_inv', 'stretch'],\n",
+       "Index(['mls_split', 'speaker', 'book', 'speech_path', 'gender', 'wham_split',\n",
+       "       'noise_path', 'chunk', 'num_chunks', 'len_s', 'len_samp', 'fs_noise',\n",
+       "       'shape', 'phase_inv', 'room_x', 'room_y', 'room_z', 'rt60', 'headC_x',\n",
+       "       'headC_y', 'headC_z', 'src_x', 'src_y', 'src_z', 'headOrient_azi',\n",
+       "       'headOrient_ele', 'snr', 'lr_inv', 'stretch', 'idx'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,49 +110,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "7d0a6cdd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mls_split</th>\n",
+       "      <th>speaker</th>\n",
+       "      <th>book</th>\n",
+       "      <th>speech_path</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>wham_split</th>\n",
+       "      <th>noise_path</th>\n",
+       "      <th>chunk</th>\n",
+       "      <th>num_chunks</th>\n",
+       "      <th>len_s</th>\n",
+       "      <th>...</th>\n",
+       "      <th>headC_z</th>\n",
+       "      <th>src_x</th>\n",
+       "      <th>src_y</th>\n",
+       "      <th>src_z</th>\n",
+       "      <th>headOrient_azi</th>\n",
+       "      <th>headOrient_ele</th>\n",
+       "      <th>snr</th>\n",
+       "      <th>lr_inv</th>\n",
+       "      <th>stretch</th>\n",
+       "      <th>idx</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>42319</th>\n",
+       "      <td>train</td>\n",
+       "      <td>10246</td>\n",
+       "      <td>12118</td>\n",
+       "      <td>10246_12118_000255.flac</td>\n",
+       "      <td>F</td>\n",
+       "      <td>tr</td>\n",
+       "      <td>20qa010z_0.2521_20fo010p_-0.2521.wav</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11.112125</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.489127</td>\n",
+       "      <td>3.184229</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>1.489127</td>\n",
+       "      <td>-43.05421</td>\n",
+       "      <td>2.882317</td>\n",
+       "      <td>0.210906</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>42319</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 30 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      mls_split  speaker   book              speech_path gender wham_split  \\\n",
+       "42319     train    10246  12118  10246_12118_000255.flac      F         tr   \n",
+       "\n",
+       "                                 noise_path  chunk  num_chunks      len_s  \\\n",
+       "42319  20qa010z_0.2521_20fo010p_-0.2521.wav      1           3  11.112125   \n",
+       "\n",
+       "       ...   headC_z     src_x src_y     src_z  headOrient_azi  \\\n",
+       "42319  ...  1.489127  3.184229   0.2  1.489127       -43.05421   \n",
+       "\n",
+       "       headOrient_ele       snr  lr_inv  stretch    idx  \n",
+       "42319        2.882317  0.210906    True      0.0  42319  \n",
+       "\n",
+       "[1 rows x 30 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df[df['speech_path']=='10246_12118_000255.flac']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "id": "c80596d3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = df.iloc[42319]"
+    "a = df.iloc[203964]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "ae331261",
+   "execution_count": 23,
+   "id": "1b1f09ca",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "42319"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16000\n",
+      "(268800,)\n",
+      "116736\n",
+      "(64000,)\n",
+      "(2, 64000)\n"
+     ]
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d6f89e94",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "mic = np.array(hlp.head_2_ku_ears(np.array([a.headC_x, a.headC_y, a.headC_z]),\n",
     "                                       np.array([a.headOrient_azi,a.headOrient_ele])))\n",
@@ -223,9 +311,80 @@
     "bin_aneIR = np.array([sig.fftconvolve(np.squeeze(ane_rirs[:,:,0, 0]), decoder[:,:,0], 'full', 0).sum(1),\n",
     "                    sig.fftconvolve(np.squeeze(ane_rirs[:,:,1, 0]), decoder[:,:,1], 'full', 0).sum(1)])\n",
     "reverberant_src = np.array([sig.fftconvolve(speech, bin_ir[0, :], 'same'), sig.fftconvolve(speech, bin_ir[1, :], 'same')])\n",
-    "anechoic_src = np.array([sig.fftconvolve(speech, bin_aneIR[0, :], 'same'), sig.fftconvolve(speech, bin_aneIR[1, :], 'same')])\n",
-    "ini_snr = 10 * np.log10(hlp.power(reverberant_src) / hlp.power(noise))\n",
-    "\n",
+    "anechoic_src = np.array([sig.fftconvolve(speech, bin_aneIR[0, :], 'same'), sig.fftconvolve(speech, bin_aneIR[1, :], 'same')])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "d3ecedd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ini_snr = 10 * np.log10(hlp.power(reverberant_src) / hlp.power(noise))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "3b6d76a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.632487620609792"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ini_snr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "451db516",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.632487620609794"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ini_snr = 10 * np.log10(hlp.power(reverberant_src) / hlp.power(noise) + np.finfo(ini_snr.dtype).resolution)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "d6f89e94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16000\n",
+      "(268800,)\n",
+      "116736\n",
+      "(64000,)\n",
+      "(2, 64000)\n"
+     ]
+    }
+   ],
+   "source": [
     "noise_gain_db = ini_snr - a.snr\n",
     "\n",
     "noise = noise * np.power(10, noise_gain_db/20)\n",
@@ -329,7 +488,8 @@
     "                        sig.fftconvolve(np.squeeze(ane_rirs[:,:,1, 0]), decoder[:,:,1], 'full', 0).sum(1)])\n",
     "    reverberant_src = np.array([sig.fftconvolve(speech, bin_ir[0, :], 'same'), sig.fftconvolve(speech, bin_ir[1, :], 'same')])\n",
     "    anechoic_src = np.array([sig.fftconvolve(speech, bin_aneIR[0, :], 'same'), sig.fftconvolve(speech, bin_aneIR[1, :], 'same')])\n",
-    "    ini_snr = 10 * np.log10(hlp.power(reverberant_src) / hlp.power(noise))\n",
+    "    ini_snr = 10 * np.log10(hlp.power(reverberant_src) / hlp.power(noise) + np.finfo(ini_snr.dtype).resolution)\n",
+    "\n",
     "\n",
     "    noise_gain_db = ini_snr - a.snr\n",
     "\n",
